src/test/deca/context/invalid/not_int.deca

// Description :
// Opérateur ! appliqué à un int
//
// Resultats :
// Erreur contextuelle
// opérateur ! attend un boolean
//

{
  boolean b;
  b = !1;
}